--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "nocountry",
-  "version": "1.0.1",
+  "name": "c16-120-react-native-front-main",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.6",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "expo": "~50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "^6.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
-    "react-router": "^6.22.1"
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-native": "^4.1.0"
+    "tailwindcss": "^3.3.2"
   },
-  "private": true,
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": [
-      "standart",
-      "standart-jsx",
-      "standart-react"
-    ]
-  }
+  "private": true
 }
