--- a/package.json
+++ b/package.json
@@ -9,21 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@fontsource/roboto": "^5.0.8",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
     "expo": "~50.0.7",
+    "expo-app-loading": "^2.1.1",
     "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
     "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "6.5.1",
+    "modal": "^1.2.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.4",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
