--- a/app.json
+++ b/app.json
@@ -15,7 +15,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "usesNonExemptEncryption": false
+      }
+    
     },
     "android": {
       "adaptiveIcon": {
