--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
     "modal": "^1.2.0",
